--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "0.21.1",
     "core-js": "^3.6.5",
+    "moment": "2.29.1",
     "vue": "^3.0.0-0"
   },
   "devDependencies": {
@@ -40,5 +42,6 @@
     "not dead"
   ],
   "keywords": [],
-  "description": ""
+  "description": "",
+  "proxy": "http://beta-backend.bookedfusion.com/"
 }
